@@ -1,176 +1,96 @@
-#!/usr/bin/env sh
+# Vigia Industrial — App Android Nativa
 
-##############################################################################
-##
-##  Gradle start up script for UN*X
-##
-##############################################################################
+App Android 100% nativa en **Kotlin + Jetpack Compose**. Sin WebView, sin Capacitor.
 
-# Attempt to set APP_HOME
-# Resolve links: $0 may be a link
-PRG="$0"
-# Need this for relative symlinks.
-while [ -h "$PRG" ] ; do
-    ls=`ls -ld "$PRG"`
-    link=`expr "$ls" : '.*-> \(.*\)$'`
-    if expr "$link" : '/.*' > /dev/null; then
-        PRG="$link"
-    else
-        PRG=`dirname "$PRG"`"/$link"
-    fi
-done
-SAVED="`pwd`"
-cd "`dirname \"$PRG\"`/" >/dev/null
-APP_HOME="`pwd -P`"
-cd "$SAVED" >/dev/null
+---
 
-APP_NAME="Gradle"
-APP_BASE_NAME=`basename "$0"`
+## ¿Qué hace?
 
-# Add default JVM options here. You can also use JAVA_OPTS and GRADLE_OPTS to pass JVM options to this script.
-DEFAULT_JVM_OPTS=""
+- **Login** con usuario/contraseña ThingsBoard + biometría (huella/rostro)
+- **Dashboard** con resumen de alarmas activas y dispositivos online
+- **Pantalla de Alarmas** con filtros (Todas / Activas / Resueltas), reconocer y resolver
+- **Pantalla de Dispositivos** con estado online/offline en tiempo real
+- **Servicio en segundo plano** que consulta ThingsBoard cada 15 segundos
+- **Arranca con el teléfono** automáticamente (BOOT_COMPLETED)
+- **Alertas de pantalla completa** sobre la pantalla de bloqueo cuando hay alarma crítica
+- **Notificaciones críticas** con botones para reconocer/resolver directamente
 
-# Use the maximum available, or set MAX_FD != -1 to use that value.
-MAX_FD="maximum"
+---
 
-warn () {
-    echo "$*"
-}
+## Cómo subir a GitHub y compilar con Codemagic
 
-die () {
-    echo
-    echo "$*"
-    echo
-    exit 1
-}
+### 1. Subir el proyecto a GitHub
 
-# OS specific support (must be 'true' or 'false').
-cygwin=false
-msys=false
-darwin=false
-nonstop=false
-case "`uname`" in
-  CYGWIN* )
-    cygwin=true
-    ;;
-  Darwin* )
-    darwin=true
-    ;;
-  MINGW* )
-    msys=true
-    ;;
-  NONSTOP* )
-    nonstop=true
-    ;;
-esac
+```bash
+git init
+git add .
+git commit -m "feat: app Android nativa Vigia Industrial"
+git remote add origin https://github.com/TU_USUARIO/vigia-android.git
+git push -u origin main
+```
 
-CLASSPATH=$APP_HOME/gradle/wrapper/gradle-wrapper.jar
+### 2. Conectar Codemagic
 
-# Determine the Java command to use to start the JVM.
-if [ -n "$JAVA_HOME" ] ; then
-    if [ -x "$JAVA_HOME/jre/sh/java" ] ; then
-        # IBM's JDK on AIX uses strange locations for the executables
-        JAVACMD="$JAVA_HOME/jre/sh/java"
-    else
-        JAVACMD="$JAVA_HOME/bin/java"
-    fi
-    if [ ! -x "$JAVACMD" ] ; then
-        die "ERROR: JAVA_HOME is set to an invalid directory: $JAVA_HOME
+1. Ir a [codemagic.io](https://codemagic.io) → **Add application**
+2. Conectar tu cuenta de GitHub y seleccionar el repositorio
+3. Codemagic detecta el `codemagic.yaml` automáticamente
+4. Ejecutar el workflow **"Vigia Industrial — Android Nativo (Debug APK)"**
+5. Cuando termine, el APK llega por email a `cumulorosario@gmail.com`
 
-Please set the JAVA_HOME variable in your environment to match the
-location of your Java installation."
-    fi
-else
-    JAVACMD="java"
-    which java >/dev/null 2>&1 || die "ERROR: JAVA_HOME is not set and no 'java' command could be found in your PATH.
+### 3. Instalar el APK en el teléfono
 
-Please set the JAVA_HOME variable in your environment to match the
-location of your Java installation."
-fi
+1. Activar **"Instalar apps de origen desconocido"** en Ajustes del teléfono
+2. Abrir el APK del email e instalar
 
-# Increase the maximum file descriptors if we can.
-if [ "$cygwin" = "false" -a "$darwin" = "false" -a "$nonstop" = "false" ] ; then
-    MAX_FD_LIMIT=`ulimit -H -n`
-    if [ $? -eq 0 ] ; then
-        if [ "$MAX_FD" = "maximum" -o "$MAX_FD" = "max" ] ; then
-            MAX_FD="$MAX_FD_LIMIT"
-        fi
-        ulimit -n $MAX_FD
-        if [ $? -ne 0 ] ; then
-            warn "Could not set maximum file descriptor limit: $MAX_FD"
-        fi
-    else
-        warn "Could not query maximum file descriptor limit: $MAX_FD_LIMIT"
-    fi
-fi
+---
 
-# For Darwin, add options to specify how the application appears in the dock
-if $darwin; then
-    GRADLE_OPTS="$GRADLE_OPTS \"-Xdock:name=$APP_NAME\" \"-Xdock:icon=$APP_HOME/media/gradle.icns\""
-fi
+## Ajustes importantes en el teléfono tras instalar
 
-# For Cygwin, switch paths to Windows format before running java
-if $cygwin ; then
-    APP_HOME=`cygpath --path --mixed "$APP_HOME"`
-    CLASSPATH=`cygpath --path --mixed "$CLASSPATH"`
-    JAVACMD=`cygpath --unix "$JAVACMD"`
+Para que las alarmas funcionen aunque el teléfono esté bloqueado:
 
-    # We build the pattern for arguments to be converted via cygpath
-    ROOTDIRSRAW=`find -L / -maxdepth 1 -mindepth 1 -type d 2>/dev/null`
-    SEP=""
-    for dir in $ROOTDIRSRAW ; do
-        ROOTDIRS="$ROOTDIRS$SEP$dir"
-        SEP="|"
-    done
-    OURCYGPATTERN="(^($ROOTDIRS))"
-    # Add a user-defined pattern to the cygpath arguments
-    if [ "$GRADLE_CYGPATTERN" != "" ] ; then
-        OURCYGPATTERN="$OURCYGPATTERN|($GRADLE_CYGPATTERN)"
-    fi
-    # Now convert the arguments - kludge to limit ourselves to /bin/sh
-    i=0
-    for arg in "$@" ; do
-        CHECK=`echo "$arg"|egrep -c "$OURCYGPATTERN" -`
-        CHECK2=`echo "$arg"|egrep -c "^-"`                                 ### Determine if an option
+| Ajuste | Valor |
+|--------|-------|
+| Inicio automático | ✅ Activado |
+| Optimización de batería | Sin restricciones |
+| Apps en recientes | Bloquear con candado |
 
-        if [ $CHECK -ne 0 ] && [ $CHECK2 -eq 0 ] ; then                    ### Added a condition
-            eval `echo args$i`=`cygpath --path --ignore --mixed "$arg"`
-        else
-            eval `echo args$i`="\"$arg\""
-        fi
-        i=$((i+1))
-    done
-    case $i in
-        (0) set -- ;;
-        (1) set -- "$args0" ;;
-        (2) set -- "$args0" "$args1" ;;
-        (3) set -- "$args0" "$args1" "$args2" ;;
-        (4) set -- "$args0" "$args1" "$args2" "$args3" ;;
-        (5) set -- "$args0" "$args1" "$args2" "$args3" "$args4" ;;
-        (6) set -- "$args0" "$args1" "$args2" "$args3" "$args4" "$args5" ;;
-        (7) set -- "$args0" "$args1" "$args2" "$args3" "$args4" "$args5" "$args6" ;;
-        (8) set -- "$args0" "$args1" "$args2" "$args3" "$args4" "$args5" "$args6" "$args7" ;;
-        (9) set -- "$args0" "$args1" "$args2" "$args3" "$args4" "$args5" "$args6" "$args7" "$args8" ;;
-    esac
-fi
+La app incluye un botón en **Ajustes → Servicio en segundo plano** que abre directamente la pantalla de batería del sistema.
 
-# Escape application args
-save () {
-    for i do printf %s\\n "$i" | sed "s/'/'\\\\''/g;1s/^/'/;\$s/\$/' \\\\/" ; done
-    echo " "
-}
-APP_ARGS=$(save "$@")
+---
 
-# Collect all arguments for the java command, following the shell quoting and substitution rules
-if $JAVACMD --add-opens java.base/java.lang=ALL-UNNAMED -version ; then
-    DEFAULT_JVM_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED $DEFAULT_JVM_OPTS"
-fi
+## Estructura del proyecto
 
-eval set -- $DEFAULT_JVM_OPTS $JAVA_OPTS $GRADLE_OPTS "\"-Dorg.gradle.appname=$APP_BASE_NAME\"" -classpath "\"$CLASSPATH\"" org.gradle.wrapper.GradleWrapperMain "$APP_ARGS"
+```
+app/src/main/java/com/cumulo/vigia/
+├── VigiaApplication.kt          # App class, inicia el servicio
+├── model/
+│   └── Models.kt                # Alarm, Device, AuthResponse, etc.
+├── data/
+│   ├── api/ThingsBoardApi.kt    # HTTP client (OkHttp)
+│   ├── local/SessionStore.kt    # Credenciales persistentes (DataStore)
+│   └── VigiaRepository.kt      # Lógica de negocio
+├── service/
+│   ├── AlarmPollingService.kt   # Foreground service — polling c/15s
+│   ├── AlarmNotificationManager.kt  # Notificaciones críticas
+│   ├── BootReceiver.kt          # Arranca con el teléfono
+│   └── AlarmActionReceiver.kt   # Reconocer/resolver desde notificación
+└── ui/
+    ├── MainActivity.kt          # Nav host + bottom bar
+    ├── VigiaViewModel.kt        # Estado global
+    ├── Components.kt            # AlarmCard, DeviceCard, StatCard
+    ├── AlarmFullScreenActivity.kt  # Pantalla de alarma sobre lock screen
+    ├── theme/Theme.kt           # Colores industriales dark
+    ├── login/LoginScreen.kt
+    ├── dashboard/DashboardScreen.kt
+    ├── alarms/AlarmsScreen.kt
+    ├── devices/DevicesScreen.kt
+    └── settings/SettingsScreen.kt
+```
 
-# by default we should be in the correct project dir, but when run from Finder on Mac, the cwd is wrong
-if [ "$(uname)" = "Darwin" ] && [ "$HOME" = "$PWD" ]; then
-  cd "$(dirname "$0")"
-fi
+---
 
-exec "$JAVACMD" "$@"
+## Servidor ThingsBoard configurado
+
+URL por defecto: `http://cumuloingenieria.duckdns.org:9090`
+
+Se puede cambiar en el código → `SessionStore.kt` → `DEFAULT_BASE_URL`
